--- a/application/admin/view/banner/add.html
+++ b/application/admin/view/banner/add.html
@@ -7,40 +7,6 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-specification" class="control-label col-xs-12 col-sm-2">{:__('Specification')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-specification" data-rule="required" class="form-control" name="row[specification]" type="text">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-barcode" class="control-label col-xs-12 col-sm-2">{:__('Barcode')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-barcode" data-rule="required" class="form-control" name="row[barcode]" type="text">
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="c-type" class="control-label col-xs-12 col-sm-2">{:__('Type')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_select('row[type]', $ProductCategoryList, null, ['class'=>'form-control selectpicker', 'data-rule'=>'required'])}
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="c-price" class="control-label col-xs-12 col-sm-2">{:__('Price')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-price" data-rule="required" class="form-control" step="0.01" name="row[price]" type="number">
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="c-member_price" class="control-label col-xs-12 col-sm-2">{:__('Member Price')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-member_price" data-rule="required" class="form-control" step="0.01" name="row[member_price]" type="number">
-        </div>
-    </div>
-
-    <div class="form-group">
         <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('Image')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="form-inline">
@@ -50,6 +16,18 @@
                 <span class="msg-box n-right" for="c-image"></span>
                <ul class="row list-inline plupload-preview" id="p-image"></ul>
             </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-links" class="control-label col-xs-12 col-sm-2">{:__('Links')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-links" data-rule="required" class="form-control" name="row[links]" type="text">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-sorting" class="control-label col-xs-12 col-sm-2">{:__('Sorting')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-sorting" data-rule="required" class="form-control" name="row[sorting]" placeholder="数字越大排序越前" type="number">
         </div>
     </div>
 
