--- a/application/admin/view/goods/product/edit.html
+++ b/application/admin/view/goods/product/edit.html
@@ -33,6 +33,14 @@
             <input id="c-price" data-rule="required" class="form-control" step="0.01" name="row[price]" type="number" value="{$row.price}">
         </div>
     </div>
+
+    <div class="form-group">
+        <label for="c-price" class="control-label col-xs-12 col-sm-2">{:__('Member Price')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-member_price" data-rule="required" class="form-control" step="0.01" name="row[member_price]" type="number" value="{$row.member_price}">
+        </div>
+    </div>
+
     <div class="form-group">
         <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('Image')}:</label>
         <div class="col-xs-12 col-sm-8">
