Signed-off-by: zjn000 <2799411400@qq.com>

--- a/application/admin/view/coupon/coupon/push.html
+++ b/application/admin/view/coupon/coupon/push.html
@@ -13,6 +13,14 @@
             <textarea name="row[content]" id="c-content" cols="30" rows="10" class="form-control" data-rule="required"></textarea>
         </div>
     </div>
+
+    <div class="form-group">
+        <label for="c-push_zhang" class="control-label col-xs-12 col-sm-2">{:__('Push Zhang')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-push_zhang" data-rule="required" class="form-control" step="1" name="row[push_zhang]" type="number" value="1">
+        </div>
+    </div>
+
     <div class="form-group">
         <label class="col-xs-12" style="color: red;">注意：{:__('Push Phone')}必须一行一个号码，禁止输入其他不相干字符，此功能慎重使用！</label>
     </div>
