--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -45,7 +45,18 @@
                 </div>
             </div>
         </header>
+        <footer>
+            <div class="container">
+                <p>&copy; 2017-2018 沃有信息科技有限公司 版权所有</p>
+                <p>粤ICP备17139436号</p>
+                <ul class="list-inline">
+                    <li>
+                        <a href="http://www.miitbeian.gov.cn" target="_blank">工信部网站</a>
+                    </li>
 
+                </ul>
+            </div>
+        </footer>
         <!-- jQuery -->
         <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 
