--- a/application/admin/view/statistics/shelvestogoods/index.html
+++ b/application/admin/view/statistics/shelvestogoods/index.html
@@ -6,7 +6,7 @@
             <div class="tab-pane fade active in" id="one">
                 <div class="widget-body no-padding">
                     <div id="toolbar" class="toolbar">
-                        {:build_toolbar('refresh')}
+                        {:build_toolbar('refresh,csv')}
                     </div>
                     <div id="two"  style="font-size:large;"></div>
                     <table id="table" class="table table-striped table-bordered table-hover" width="100%"></table>
